--- a/assets/css/css-1.css
+++ b/assets/css/css-1.css
@@ -3,6 +3,16 @@
     src: url('assets/fonts/PRISTINA.TTF');
   }
 
+  .img-header{
+    width: 45%;
+  }
+
+  @media (max-width: 780px){
+    .img-header{
+      width: 75%;
+    }
+  }
+
   .font-1{
     font-family: pristina;
   }
