--- a/assets/css/css-1.css
+++ b/assets/css/css-1.css
@@ -3,6 +3,11 @@
     src: url('assets/fonts/PRISTINA.TTF');
   }
 
+  .home-prod{
+    font-size: 18px;
+    font-weight: bold;
+  }
+
   .img-header{
     width: 45%;
   }
@@ -95,6 +100,14 @@
   }
 }
 
+.division{
+  color: #ffffff;
+  background: #ee6810ee;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  box-shadow: 0px 5px 10px #88888845;
+}
+
 .btn-car{
   position: absolute;
   z-index: 1;
@@ -118,6 +131,7 @@
 .btn-more{
   font-size: 20px;
   background: #ee6810;
+  border-radius: 12px; 
 }
 
 .btn-more:hover{
