--- a/assets/css/css-1.css
+++ b/assets/css/css-1.css
@@ -1,8 +1,3 @@
-/*  @font-face {
-    font-family: pristina;
-    src: url('assets/fonts/PRISTINA.TTF');
-  }*/
-
   .home-prod{
     font-size: 18px;
     font-weight: bold;
@@ -17,10 +12,6 @@
       width: 75%;
     }
   }
-
-/*  .font-1{
-    font-family: pristina;
-  }*/
 
   .top-nav-collapse{
     background: #ee6810ee !important;
@@ -50,19 +41,6 @@
     background: linear-gradient(to bottom, #ee6810, #ffffff00 );
     background-size: cover;
   }
-  
- /*.carta-view-velas {
-    background: url('https://estaticos.muyinteresante.es/media/cache/1000x460_thumb/uploads/images/article/55365b6934099b0279c8f5d0/llama-velas.jpg') center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  
-  .carta-view-armo {
-    background: url('');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }*/
 
   @media (min-width: 768px) {
       .view {
@@ -184,4 +162,24 @@
 .whats{
   font-size: 20px;
   color: #2ecc71;
+}
+
+body::-webkit-scrollbar{
+  width: 6px;
+  background: #ee681084;
+}
+
+body::-webkit-scrollbar-thumb{
+  background: #ee6810;
+  border-radius: 0;
+}
+
+img.velas{
+  height: 30vh;
+}
+
+@media (max-width: 575px){
+  img.velas{
+    height: 50vh;
+  }  
 }
