--- a/assets/css/css-1.css
+++ b/assets/css/css-1.css
@@ -74,7 +74,10 @@
 
 @media (min-width: 1096px){
   .fijar{
-    position: fixed; top: 15%; right: 0; z-index: -1;
+    position: fixed;
+    top: 15%;
+    right: 0;
+    z-index: -1;
   }
 }
 
