se le quito el naranja del header

--- a/assets/css/css-1.css
+++ b/assets/css/css-1.css
@@ -38,7 +38,7 @@
   }
 
   .view {
-    background: linear-gradient(to bottom, #ee6810, #ffffff00 );
+    background: white;
     background-size: cover;
   }
 
